--- a/index.html
+++ b/index.html
@@ -1,206 +1,233 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Juan Jair Villalobos Nuñez | Desarrollador de Software</title>
+    <meta
+      name="description"
+      content="Portafolio de Juan Jair Villalobos Nuñez, desarrollador de software con experiencia en Python, Go y TypeScript."
+    />
+    <meta
+      name="keywords"
+      content="desarrollador de software, Python, Go, TypeScript, portafolio"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Juan Jair Villalobos Nuñez | Desarrollador de Software</title>
-  <meta name="description"
-    content="Portafolio de Juan Jair Villalobos Nuñez, desarrollador de software con experiencia en Python, Go y TypeScript." />
-  <meta name="keywords" content="desarrollador de software, Python, Go, TypeScript, portafolio" />
-  <link rel="stylesheet" href="css/custom.css" />
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-</head>
-
-<body>
-  <nav>
-    <div class="nav-container">
-      <a href="#" class="nav-logo">JV</a>
-      <ul class="nav-menu">
-        <li><a href="#hero" class="nav-link">Inicio</a></li>
-        <li><a href="#projects" class="nav-link">Proyectos</a></li>
-        <li><a href="#skills" class="nav-link">Habilidades</a></li>
-        <li><a href="#contact" class="nav-link">Contacto</a></li>
-      </ul>
-      <div class="nav-toggle">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-  </nav>
-
-  <header class="hero" id="hero">
-    <div id="particles-js"></div>
-    <div class="hero-content">
-      <h1>Juan Jair Villalobos Nuñez</h1>
-      <p>Software Developer | Backend | Python | Go | TypeScript</p>
-    </div>
-  </header>
-
-  <main>
-    <section id="about">
-      <h2>Sobre mí</h2>
-      <p>
-        Soy un desarrollador de software apasionado por crear soluciones
-        tecnológicas de alta calidad. Con más de 5 años de experiencia, me he
-        especializado en el desarrollo de APIs RESTful, bases de datos y
-        lenguajes como Python, Go y TypeScript. Mi enfoque principal es la
-        entrega de soluciones escalables, seguras y con un alto rendimiento.
-      </p>
-    </section>
-
-    <section id="experience">
-      <h2>Experiencia Laboral</h2>
-      <p>
-        Más de 5 años de experiencia en desarrollo de software. Especialista
-        en APIs REST, bases de datos y lenguajes como Python, Golang y
-        TypeScript. Conocimiento en soporte técnico de TI. Diseño e
-        implementación de APIs RESTful escalables con enfoque en rendimiento,
-        seguridad y mejores prácticas. Integración con API Gateways a través
-        del desarrollo de plugins. Participación integral en el ciclo de vida
-        de aplicaciones web y móviles de alto tráfico. Metodologías ágiles.
-        Compromiso con el aprendizaje continuo y el crecimiento profesional.
-        Enfoque en entregar soluciones tecnológicas de alto valor que mejoren
-        el éxito del negocio.
-      </p>
-    </section>
-
-    <aside id="education">
-      <h2>Educación</h2>
-      <h3>National Learning Service (SENA)</h3>
-      <ul>
-        <li>👨‍💻 Técnico en programación de software (2021)</li>
-        <li>🧪 Gestión de pruebas de software (2022)</li>
-        <li>
-          🛠️ Procesos de soporte técnico para el mantenimiento de equipos de
-          cómputo (2022)
-        </li>
-        <li>💻 Desarrollo web con PHP (2021)</li>
-        <li>🗣️ Fundamentos de inglés A1 (2018)</li>
-        <li>💾 Ingeniería de sistemas (2022)</li>
-      </ul>
-
-      <h3>OpenBootcamp</h3>
-      <ul>
-        <li>⚛️ ReactJS Avanzado (2022)</li>
-        <li>🐍 Python Básico (2022)</li>
-        <li>🌐 HTML y CSS Básico (2022)</li>
-        <li>☕ Java Básico (2022)</li>
-        <li>👶 Introducción a la programación (2022)</li>
-      </ul>
-
-      <h3>Fundación Universitaria Tecnológica Comfenalco</h3>
-      <ul>
-        <li>💻 Tecnólogo en desarrollo de software (2021-2023)</li>
-      </ul>
-    </aside>
-
-    <section id="projects">
-      <h2>Proyectos</h2>
-      <article>
-        <h3>Tigo Money Wallet</h3>
-        <p>
-          Tigo Money, una innovadora billetera digital que permite a los
-          usuarios realizar transacciones rápida y seguramente desde sus
-          dispositivos móviles.
-        </p>
-        <p>Go KrakenD API Gateway Amazon Web Services (AWS)</p>
-      </article>
-
-      <article>
-        <h3>Rickandmorty Client</h3>
-        <p>
-          Este es un cliente que utiliza React js y Styled Components para
-          consumir la API GraphQL de Rick and Morty.
-        </p>
-        <p>React js Styled Components Rick and Morty GraphQL API</p>
-      </article>
-
-      <article>
-        <h3>facturaexpress</h3>
-        <p>
-          Es una API escrita en Go que permite a los usuarios crear y
-          gestionar facturas, con campos para información de la empresa,
-          servicios, valor total y detalles del operador.
-        </p>
-        <p>Go Gin PostgreSQL</p>
-      </article>
-
-      <p>Ver más en <a href="#">Github</a></p>
-    </section>
-
-    <section id="skills">
-      <h2>Habilidades</h2>
-      <div class="skills-container">
-        <div class="skill">
-          <img src="python-logo.png" alt="Python Logo" />
-          <h3>Python</h3>
-          <p>
-            Dominio del lenguaje de programación Python, con experiencia en
-            desarrollo de aplicaciones web, scripts y automatización.
-          </p>
-        </div>
-        <div class="skill">
-          <img src="go-logo.png" alt="Go Logo" />
-          <h3>Go</h3>
-          <p>
-            Conocimientos sólidos en el lenguaje de programación Go, utilizado
-            para el desarrollo de aplicaciones de alto rendimiento y APIs
-            RESTful.
-          </p>
-        </div>
-        <div class="skill">
-          <img src="typescript-logo.png" alt="TypeScript Logo" />
-          <h3>TypeScript</h3>
-          <p>
-            Experiencia en el desarrollo de aplicaciones web con TypeScript,
-            una extensión de JavaScript que agrega tipado estático.
-          </p>
+  <body>
+    <nav>
+      <div class="nav-container">
+        <a href="#" class="nav-logo">JV</a>
+        <ul class="nav-menu">
+          <li><a href="#hero" class="nav-link">Inicio</a></li>
+          <li><a href="#projects" class="nav-link">Proyectos</a></li>
+          <li><a href="#skills" class="nav-link">Habilidades</a></li>
+          <li><a href="#contact" class="nav-link">Contacto</a></li>
+        </ul>
+        <div class="nav-toggle">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
       </div>
-    </section>
+    </nav>
 
-    <section id="contact">
-      <h2>Contáctame</h2>
-      <p>¡Hola! ¿Necesitas servicios de desarrollo de software?</p>
+    <header class="hero" id="hero">
+      <div id="particles-js"></div>
+      <div class="hero-content">
+        <h1>Juan Jair Villalobos Nuñez</h1>
+        <p>Software Developer | Backend | Python | Go | TypeScript</p>
+      </div>
+    </header>
+
+    <main>
+      <section id="about">
+        <h2>Sobre mí</h2>
+        <p>
+          Soy un desarrollador de software apasionado por crear soluciones
+          tecnológicas de alta calidad. Con más de 5 años de experiencia, me he
+          especializado en el desarrollo de APIs RESTful, bases de datos y
+          lenguajes como Python, Go y TypeScript. Mi enfoque principal es la
+          entrega de soluciones escalables, seguras y de alto rendimiento.
+        </p>
+      </section>
+
+      <section id="experience">
+        <h2>Experiencia Laboral</h2>
+        <p>
+          Más de 5 años de experiencia en desarrollo de software. Especialista
+          en APIs REST, bases de datos y lenguajes como Python, Golang y
+          TypeScript. Conocimiento en soporte técnico de TI. Diseño e
+          implementación de APIs RESTful escalables con enfoque en rendimiento,
+          seguridad y mejores prácticas. Integración con API Gateways a través
+          del desarrollo de plugins. Participación integral en el ciclo de vida
+          de aplicaciones web y móviles de alto tráfico. Metodologías ágiles.
+          Compromiso con el aprendizaje continuo y el crecimiento profesional.
+          Enfoque en entregar soluciones tecnológicas de alto valor que mejoren
+          el éxito del negocio.
+        </p>
+      </section>
+
+      <aside id="education">
+        <h2>Educación</h2>
+        <h3>National Learning Service (SENA)</h3>
+        <ul>
+          <li>👨‍💻 Técnico en programación de software (2021)</li>
+          <li>🧪 Gestión de pruebas de software (2022)</li>
+          <li>
+            🛠️ Procesos de soporte técnico para el mantenimiento de equipos de
+            cómputo (2022)
+          </li>
+          <li>💻 Desarrollo web con PHP (2021)</li>
+          <li>🗣️ Fundamentos de inglés A1 (2018)</li>
+          <li>💾 Ingeniería de sistemas (2022)</li>
+        </ul>
+
+        <h3>OpenBootcamp</h3>
+        <ul>
+          <li>⚛️ ReactJS Avanzado (2022)</li>
+          <li>🐍 Python Básico (2022)</li>
+          <li>🌐 HTML y CSS Básico (2022)</li>
+          <li>☕ Java Básico (2022)</li>
+          <li>👶 Introducción a la programación (2022)</li>
+        </ul>
+
+        <h3>Fundación Universitaria Tecnológica Comfenalco</h3>
+        <ul>
+          <li>💻 Tecnólogo en desarrollo de software (2021-2023)</li>
+        </ul>
+      </aside>
+
+      <section id="projects">
+        <h2>Proyectos</h2>
+        <article>
+          <h3>Tigo Money Wallet</h3>
+          <p>
+            Tigo Money, una innovadora billetera digital que permite a los
+            usuarios realizar transacciones rápidas y seguras desde sus
+            dispositivos móviles.
+          </p>
+          <p>Go KrakenD API Gateway Amazon Web Services (AWS)</p>
+        </article>
+
+        <article>
+          <h3>Rickandmorty Client</h3>
+          <p>
+            Este es un cliente que utiliza React js y Styled Components para
+            consumir la API GraphQL de Rick and Morty.
+          </p>
+          <p>React js Styled Components Rick and Morty GraphQL API</p>
+        </article>
+
+        <article>
+          <h3>facturaexpress</h3>
+          <p>
+            Es una API escrita en Go que permite a los usuarios crear y
+            gestionar facturas, con campos para información de la empresa,
+            servicios, valor total y detalles del operador.
+          </p>
+          <p>Go Gin PostgreSQL</p>
+        </article>
+
+        <p>Ver más en <a href="#">Github</a></p>
+      </section>
+
+      <section id="skills">
+        <h2>Habilidades</h2>
+        <div class="skills-container">
+          <div class="skill">
+            <img src="/images/python-logo.png" alt="Python Logo" />
+            <h3>Python</h3>
+            <p>
+              Dominio del lenguaje de programación Python, con experiencia en
+              desarrollo de aplicaciones web, scripts y automatización.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="/images/go-logo.png" alt="Go Logo" />
+            <h3>Go</h3>
+            <p>
+              Conocimientos sólidos en el lenguaje de programación Go, utilizado
+              para el desarrollo de aplicaciones de alto rendimiento y APIs
+              RESTful.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="/images/typescript-logo.png" alt="TypeScript Logo" />
+            <h3>TypeScript</h3>
+            <p>
+              Experiencia en el desarrollo de aplicaciones web con TypeScript,
+              una extensión de JavaScript que agrega tipado estático.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section id="contact">
+        <h2>Contáctame</h2>
+        <p>¡Hola! ¿Necesitas servicios de desarrollo de software?</p>
+        <p>
+          Mi nombre es Juan Villalobos y estoy aquí para ayudarte. Déjame un
+          mensaje con tus necesidades y me pondré en contacto contigo lo antes
+          posible. ¡Espero tener la oportunidad de trabajar contigo!
+        </p>
+        <form>
+          <label for="name">Nombre</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            placeholder="Tu nombre"
+            required
+          />
+
+          <label for="email">Correo electrónico</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Tu correo electrónico"
+            required
+          />
+
+          <label for="subject">Asunto</label>
+          <input
+            type="text"
+            id="subject"
+            name="subject"
+            placeholder="Asunto"
+            required
+          />
+
+          <label for="message">Mensaje</label>
+          <textarea
+            id="message"
+            name="message"
+            rows="5"
+            placeholder="Tu mensaje"
+            required
+          ></textarea>
+
+          <button type="submit">Enviar Mensaje</button>
+        </form>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2024 Juan Jair Villalobos Nuñez</p>
       <p>
-        Mi nombre es Jair Villalobos y estoy aquí para ayudarte. Déjame un
-        mensaje con tus necesidades y me pondré en contacto contigo lo antes
-        posible. ¡Espero tener la oportunidad de trabajar contigo!
+        <a href="#">GitHub</a>
+        <a href="#">Linkedin</a>
       </p>
-      <form>
-        <label for="name">Nombre</label>
-        <input type="text" id="name" name="name" placeholder="Tu nombre" required />
-
-        <label for="email">Correo electrónico</label>
-        <input type="email" id="email" name="email" placeholder="Tu correo electrónico" required />
-
-        <label for="subject">Asunto</label>
-        <input type="text" id="subject" name="subject" placeholder="Asunto" required />
-
-        <label for="message">Mensaje</label>
-        <textarea id="message" name="message" rows="5" placeholder="Tu mensaje" required></textarea>
-
-        <button type="submit">Enviar Mensaje</button>
-      </form>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Juan Jair Villalobos Nuñez</p>
-    <p>
-      <a href="#">GitHub</a>
-      <a href="#">Linkedin</a>
-    </p>
-  </footer>
-  <script>
-    /* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
-    particlesJS.load("particles-js", "js/particles.json", function () {
-      console.log("Animación de partículas inicializada");
-    });
-  </script>
-  <script src="js/anaimation.js"></script>
-</body>
-
+    </footer>
+    <script>
+      /* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
+      particlesJS.load("particles-js", "js/particles.json", function () {
+        console.log("Animación de partículas inicializada");
+      });
+    </script>
+    <script src="js/anaimation.js"></script>
+  </body>
 </html>
