--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <script src="js/validForm.js"></script>
+  <script>
+    /* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
+    particlesJS.load("particles-js", "js/particles.json", function () {
+      console.log("Animación de partículas inicializada");
+    });
+  </script>
+  <script src="js/anaimation.js"></script>
 </head>
 
 <body>
@@ -45,7 +52,7 @@
       <h2>Sobre mí</h2>
       <p>
         Soy un desarrollador de software apasionado por crear soluciones
-        tecnológicas de alta calidad. Con más de 5 años de experiencia, me he
+        tecnológicas de alta calidad. Con más de 3 años de experiencia, me he
         especializado en el desarrollo de APIs RESTful, bases de datos y
         lenguajes como Python, Go y TypeScript. Mi enfoque principal es la
         entrega de soluciones escalables, seguras y de alto rendimiento.
@@ -129,7 +136,7 @@
         <p>Go Gin PostgreSQL</p>
       </article>
 
-      <p>Ver más en <a href="#">Github</a></p>
+      <p>Ver más en <a href="https://github.com/juanvillalobosnz" target="_blank" >Github</a></p>
     </section>
 
     <section id="skills">
@@ -210,17 +217,10 @@
   <footer>
     <p>&copy; 2024 Juan Jair Villalobos Nuñez</p>
     <p>
-      <a href="#">GitHub</a>
-      <a href="#">Linkedin</a>
+      <a href="https://github.com/juanvillalobosnz" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/juanvillalobosnz/" target="_blank">Linkedin</a>
     </p>
   </footer>
-  <script>
-    /* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
-    particlesJS.load("particles-js", "js/particles.json", function () {
-      console.log("Animación de partículas inicializada");
-    });
-  </script>
-  <script src="js/anaimation.js"></script>
 </body>
 
 </html>
