adding navbar mobile confign and other styles css for mode dark

--- a/index.html
+++ b/index.html
@@ -318,5 +318,9 @@
           document.body.classList.toggle("dark-theme", this.checked);
         });
     </script>
+    <script>document.querySelector('.nav-toggle').addEventListener('click', function() {
+      document.querySelector('.nav-menu').classList.toggle('active');
+    });
+    </script>
   </body>
 </html>
